src/main/java/com/example/orderservice/error/ResourceAlreadyExistsException.java
package com.example.orderservice.error;

public class ResourceAlreadyExistsException extends RuntimeException {
    public ResourceAlreadyExistsException(String message) { super(message); }
}

